--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -117,9 +117,11 @@ jobs:
           cmdstanr::check_cmdstan_toolchain()
           #cmdstanr::install_cmdstan()
         shell: Rscript {0}
-        
+
       - name: Verify credentials
         run: |
+          pwd
+          ls
           ./.github/decrypt_secret.sh
           ls ~/.config/earthengine
           earthengine -h
