--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -153,7 +153,8 @@ jobs:
 
       - name: update md
         run: |
-          knitr::knit("index.Rmd")  
+          knitr::knit("index.Rmd")
+        shell: Rscript {0}
 
       - name: Upload latest run
         run: |
