--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -154,7 +154,7 @@ jobs:
 
       - name: update md
         run: |
-          "targets::tar_load(names = c(model_results, model_prediction, spatial_outputs, parks))"
+          "targets::tar_load(names = c(model_results, model_prediction, spatial_outputs, parks), envir = globalenv())"
           #rmarkdown::render(input = "pages/index.Rmd",output_dir = ".",envir = globalenv())
           rmarkdown::render(input = "pages/index.Rmd")
           rmarkdown::render(input = "pages/model_summary.rmd")
