--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -64,6 +64,8 @@ jobs:
       - name: Checkout LFS objects
         run: git lfs checkout
         continue-on-error: true
+      - name: Whitelist directory
+        run: git config --global --add safe.directory /__w/emma_report/emma_report
       - name: Install R Package Dependencies
         run: |-
           Rscript -e "questionr::qscan(list.files(pattern='*.R',recursive=T), load = TRUE, detail = TRUE)" # this scans all scripts and installs any needed packages
