fiddling with yaml

--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -33,7 +33,8 @@ name: targets
 
 jobs:
   targets:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
+    container: adamwilsonlab/emma:latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       RENV_PATHS_ROOT: ~/.local/share/renv
