--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -36,23 +36,11 @@ jobs:
     runs-on: ubuntu-18.04
     container: adamwilsonlab/emma:latest
     env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      RENV_PATHS_ROOT: ~/.local/share/renv
+      GITHUB_PAT: ${{ secrets.GH_PAT_BSM }}
+#     RENV_PATHS_ROOT: ~/.local/share/renv
+
     steps:
       - uses: actions/checkout@v2
-      - uses: r-lib/actions/setup-r@master
-      - uses: r-lib/actions/setup-pandoc@master
-
-      - name: Install Mac system dependencies
-        if: runner.os == 'macOS'
-        run: brew install zeromq
-
-      - name: Install Linux system dependencies
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get install libcurl4-openssl-dev
-          sudo apt-get install libssl-dev
-          sudo apt-get install libzmq3-dev
 
       - name: Cache packages
         uses: actions/cache@v1
