--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -93,15 +93,15 @@ jobs:
         run: git ls-files -mo --exclude=renv > .targets-files
 
       - name: Create the runs branch if it does not already exist
-        if: steps.runs-exist.outcome != 'success'
+        #if: steps.runs-exist.outcome != 'success'
         run: git checkout --orphan targets-runs
 
-      - name: Put the worktree in the runs branch if the latter already exists
-        if: steps.runs-exist.outcome == 'success'
-        run: |
-          rm -r .git
-          mv .targets-runs/.git .
-          rm -r .targets-runs
+      # - name: Put the worktree in the runs branch if the latter already exists
+      #   if: steps.runs-exist.outcome == 'success'
+      #   run: |
+      #     rm -r .git
+      #     mv .targets-runs/.git .
+      #     rm -r .targets-runs
 
       - name: Upload latest run
         run: |
