--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -44,7 +44,7 @@ jobs:
     container: adamwilsonlab/emma:latest
     env:
       GITHUB_PAT: ${{ secrets.GH_PAT_BSM }}
-#     RENV_PATHS_ROOT: ~/.local/share/renv
+      RENV_PATHS_ROOT: ~/.local/share/renv
 
     steps:
       - uses: actions/checkout@v2
