--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -43,7 +43,7 @@ name: targets
 
 jobs:
   targets:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     container: adamwilsonlab/emma:latest
     env:
       GITHUB_PAT: ${{ secrets.GH_PAT_BSM }}
