--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -143,7 +143,7 @@ jobs:
 
       - name: Run targets pt 2
         run: |
-          targets::tar_make()
+          targets::tar_destroy(ask=FALSE)
         shell: Rscript {0}
 
       - name: Create the runs branch if it does not already exist
