commented out the upload

--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -157,20 +157,20 @@ jobs:
           mv .${{ steps.extract_branch.outputs.branch }}-runs/.git .
           rm -r .${{ steps.extract_branch.outputs.branch }}-runs
 
-      - name: Upload latest run
-        run: |
-          git config --local user.name "GitHub Actions"
-          git config --local user.email "actions@github.com"
-          rm -r .gitignore .github/workflows
-          git lfs track _targets/objects/* #use git LFS to track the targets output (larger files)
-          git lfs track "data/**"
-          git add --all -- ':!renv'
-          for file in $(git ls-files -mo --exclude=renv)
-          do
-            git add -f $file
-          done
-          git commit -am "Run pipeline"
-          git push origin ${{ steps.extract_branch.outputs.branch }}-runs
+      # - name: Upload latest run
+      #   run: |
+      #     git config --local user.name "GitHub Actions"
+      #     git config --local user.email "actions@github.com"
+      #     rm -r .gitignore .github/workflows
+      #     git lfs track _targets/objects/* #use git LFS to track the targets output (larger files)
+      #     git lfs track "data/**"
+      #     git add --all -- ':!renv'
+      #     for file in $(git ls-files -mo --exclude=renv)
+      #     do
+      #       git add -f $file
+      #     done
+      #     git commit -am "Run pipeline"
+      #     git push origin ${{ steps.extract_branch.outputs.branch }}-runs
 
       - name: Prepare failure artifact
         if: failure()
