--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -143,7 +143,7 @@ jobs:
 
       - name: Run targets pt 2
         run: |
-          targets::tar_destroy(destroy = "all",ask = FALSE)
+          #targets::tar_destroy(destroy = "all",ask = FALSE)
           targets::tar_make()
         shell: Rscript {0}
 
