--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -100,15 +100,17 @@ jobs:
           fetch-depth: 1
           path: .${{ steps.extract_branch.outputs.branch }}-runs
 
-      - name: Restore output files from the previous run
-        if: steps.runs-exist.outcome == 'success'
-        run: |
-          for (dest in scan(".${{ steps.extract_branch.outputs.branch }}-runs/.targets-files", what = character())) {
-            source <- file.path(".${{ steps.extract_branch.outputs.branch }}-runs", dest)
-            if (!file.exists(dirname(dest))) dir.create(dirname(dest), recursive = TRUE)
-            if (file.exists(source)) file.rename(source, dest)
-          }
-        shell: Rscript {0}
+
+## This restore output is temporarily uncommented while debugging runs
+      # - name: Restore output files from the previous run
+      #   if: steps.runs-exist.outcome == 'success'
+      #   run: |
+      #     for (dest in scan(".${{ steps.extract_branch.outputs.branch }}-runs/.targets-files", what = character())) {
+      #       source <- file.path(".${{ steps.extract_branch.outputs.branch }}-runs", dest)
+      #       if (!file.exists(dirname(dest))) dir.create(dirname(dest), recursive = TRUE)
+      #       if (file.exists(source)) file.rename(source, dest)
+      #     }
+      #   shell: Rscript {0}
 
 #      - name: Run targets pipeline
 #        run: targets::tar_make(callr_function = NULL)
