--- a/.github/workflows/targets.yaml
+++ b/.github/workflows/targets.yaml
@@ -71,6 +71,7 @@ jobs:
         continue-on-error: true
       - name: Install R Package Dependencies
         run: |-
+          Rscript -e "update.packages(ask = FALSE)"
           Rscript -e "questionr::qscan(list.files(pattern='*.R',recursive=T), load = TRUE, detail = TRUE)" # this scans all scripts and installs any needed packages
       - name: Authorize Github for R
         run: |-
