--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
     - "*.qmd"
     - "!report_prototype.qmd" #just the template - the final ones are generated in /reports
   execute-dir: "project"
-  output-dir: "_site"
+  output-dir: "docs"
 
 website:
   title: "Ecosystem Monitoring for Management Application (EMMA)"
